--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="text-cont">
           <h1 class="header-cont-1">MODERN ART GALLERY</h1>
         </div>
-        <img src="./assets/desktop/image-hero.jpg" alt="">
+        <img class="hero" src="./assets/desktop/image-hero.jpg" alt="">
         <div class="main-header">
           <h1 class="header-cont-1">MODERN ART GALLERY</h1>
           <div class="para">
@@ -37,7 +37,7 @@
              <a href="./location.html" class="button-location" >
 
              <div class="button">OUR LOCATION</div>
-             <img class="arrow" src="./assets/icon-arrow-right.svg" width="20px"  alt="icon arrow right">
+             <div class="arrow"><img src="./assets/icon-arrow-right.svg" width="20px"  alt="icon arrow right"></div>
           </div>
           </a>
         </div>
