--- a/location.html
+++ b/location.html
@@ -3,27 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Art gallery</title>
+  <link rel="stylesheet" href="./css/location.css">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800&display=swap" rel="stylesheet">
+  
+  <title>Art loccation
+    
+  </title>
 </head>
 <body>
-  Start coding ................
-<header>
-    <div class="general-header">
-      <div class="header-text">
-        <h1 class="header1">MODERN<br> ART GALLERY</h1>
+      <section class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2990.274257380938!2d-70.56068388481569!3d41.45496659976631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e52963ac45bbcb%3A0xf05e8d125e82af10!2sDos%20Mas!5e0!3m2!1sen!2sus!4v1671220374408!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <a href="./index.html"class="button-container" >
+            <div class="arrow"> <img src="./assets/icon-arrow-left.svg" alt="icon-arrow-left"></div>
+              <div class="button">BACK TO HOME</div>
+              </a>
+      </section>
+
+    <section class="main-part">
+      <h2>OUR LOCATION</h2>
+      <div class="content">
+         <h4>99 King Street</h4>
+         <div class="paragraph">
+              <p>Newport</p>
+              <p>RI 02840</p>
+              <p>United States of America</p>
+         </div>
+         <p class="paragraph4">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
       </div>
-      <img class="mobile-image" srcset="./assets/mobile/image-hero.jpg 375w, ./assets/mobile/image-hero@2x.jpg 750w"  sizes="(max-width: 500px) 375px" alt="mobile photo">
-      <div class="main-header">
-        <h1 class="header1">MODERN<br> ART GALLERY</h1>
-        <div class="flex1">
-           <p class="paragraph1">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
-           <a href="./location.html" class="button-location" >
-           <div class="button">OUR LOCATION</div>
-           <img src="./assets/icon-arrow-right.svg"  alt="icon arrow right">
-        </div>
-        </a>
-      </div>
-    </div>
-</header>
+    </section>
+    
+  <footer>
+         <img class="logo" src="./assets/logo-dark.svg" alt="dark-logo">
+         <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+         <div class="footer-icons">
+          <img src="./assets/icon-facebook.svg" alt="">
+          <img src="./assets/icon-instagram.svg" alt="">
+          <img src="./assets/icon-twitter.svg" alt="">
+         </div>
+  </footer>
 </body>
 </html>
